<resources>
    <string name="app_name">Coaster Collection</string>
    <string name="app_name_short">Coasters</string>
    <string name="app_name_series">Series</string>
    <string name="app_name_trademarks">Trademarks</string>
    <string name="app_name_collectors">Collectors</string>
    <string name="app_name_statistics">Statistics</string>
    <string name="app_name_gallery">Gallery</string>
    <string name="app_name_advanced_search">Search</string>
    <string name="app_name_graphs">Graphs</string>

    <string name="pref_sorting_settings">Coaster List: Sort</string>
    <string name="pref_show_info_settings">Coaster: Show Info</string>
    <string name="pref_listview_type_settings">Type of items in list screen</string>

    <string name="pref_sort_reverse">Reverse order</string>
    <string name="pref_sort_reverse_summary">Highest coaster id first</string>
    <string name="pref_title_listview_type">List type</string>
    <string name="pref_dialogtitle_listview_type">List type</string>

    <string name="pref_show_info_details">Coaster Details</string>
    <string name="pref_show_info_description">Coaster Description</string>
    <string name="pref_show_info_text">Coaster Text</string>
    <string name="pref_show_info_collector">Collector</string>
    <string name="pref_show_info_series">Series</string>
    <string name="pref_show_info_location">Location</string>
    <string name="pref_show_info_shape">Shape</string>
    <string name="pref_show_info_date">Date</string>
    <string name="pref_show_info_quality">Quality</string>
    <string name="pref_show_info_coaster_type">Coaster Type</string>
    <string name="pref_show_info_image_back">Show Backside Image</string>
    <string name="pref_show_info_image_back_summary">Show backside image in list if available</string>

    <string name="pref_key_sort_reverse">pref_key_sort_reverse</string>
    <string name="pref_key_listview_type">pref_key_listview_type</string>

    <string name="pref_key_show_info_details">pref_key_show_info_details</string>
    <string name="pref_key_show_info_description">pref_key_show_info_description</string>
    <string name="pref_key_show_info_text">pref_key_show_info_text</string>
    <string name="pref_key_show_info_collector">pref_key_show_info_collector</string>
    <string name="pref_key_show_info_series">pref_key_show_info_series</string>
    <string name="pref_key_show_info_location">pref_key_show_info_location</string>
    <string name="pref_key_show_info_shape">pref_key_show_info_shape</string>
    <string name="pref_key_show_info_date">pref_key_show_info_date</string>
    <string name="pref_key_show_info_quality">pref_key_show_info_quality</string>
    <string name="pref_key_show_info_coaster_type">pref_key_show_info_coaster_type</string>
    <string name="pref_key_show_info_image_back">pref_key_show_info_image_back</string>

    <string-array name="pref_listview_type_entries">
        <item>@string/listview_type_1_entry</item>
        <item>@string/listview_type_2_entry</item>
        <item>@string/listview_type_3_entry</item>
    </string-array>

    <string-array name="pref_listview_type_values">
        <item>@string/listview_type_1_value</item>
        <item>@string/listview_type_2_value</item>
        <item>@string/listview_type_3_value</item>
    </string-array>

    <string name="listview_type_1_entry">Card type items</string>
    <string name="listview_type_2_entry">Full width items</string>
    <string name="listview_type_3_entry">Full width items (summary)</string>

    <string name="listview_type_1_value">CardType</string>
    <string name="listview_type_2_value">FullWidthType</string>
    <string name="listview_type_3_value">FullWidthTypeSum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_clear_filter">Clear Filter</string>
    <string name="action_export">Export</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="action_adv_filter">Advanced Filter</string>
    <string name="action_search">Filter</string>
    <string name="action_goto">Goto...</string>
    <string name="action_zoom_in">Zoom In</string>
    <string name="action_zoom_out">Zoom Out</string>
    <string name="action_exclude_back">Exclude back image</string>
    <string name="action_include_back">Include back image</string>
    <string name="action_graphs">Graphs</string>


    <string name="contentDescImg">(image)</string>

    <string name="lblTitleCoasterList">Coastercollection:</string>
    <string name="lblCoasterIDEnd">.</string>
    <string name="lblSeriesNbrEnd">:</string>
    <string name="lblSeparator">-</string>
    <string name="lblQuality">Quality:</string>
    <string name="lblSeriesNbr">Series Nbr:</string>
    <string name="lblTitleAddCoaster">Coaster</string>
    <string name="lblTitleAddTrademark">Trademark</string>
    <string name="lblTitleAddSeries">Series</string>
    <string name="lblTitleAddCollector">Collector</string>

    <string name="lblGotoDialogTitle">Goto Coaster ID:</string>
    <string name="lblGotoDialogPosBtn">Goto</string>
    <string name="lblGotoDialogNegBtn">Cancel</string>

    <string name="lblOops">Oops!</string>
    <string name="lblNameUndefined">...</string>
    <string name="lblLoading">Loading</string>
    <string name="lblUnknown">\?</string>

    <string name="dummy_trademark">Dummy Trademark</string>
    <string name="dummy_brewery">Dummy Brewery</string>
    <string name="dummy_coaster_id">1234</string>
    <string name="dummy_series_name">Dummy series.</string>
    <string name="dummy_series_nbr">12/32:</string>
    <string name="dummy_donation_date">31/12/2016</string>
    <string name="dummy_donor">Janssens, Jan</string>
    <string name="dummy_donor_alias">De Jan</string>
    <string name="dummy_donor_initials">(JJ)</string>
    <string name="dummy_collect_place">Halle - Café Dummy</string>
    <string name="dummy_shape">Square</string>
    <string name="dummy_measurements">(Side: 78mm)</string>
    <string name="dummy_quality">9/10</string>
    <string name="dummy_quality_text">@string/quality_9</string>
    <string name="dummy_coaster_desc">This is the description of the coaster. This also can be a very long text. Even more than 2 lines!</string>
    <string name="dummy_coaster_text">This is the text of the coaster. Again, this can be a very long text! Even more than 2 lines!</string>
    <string name="dummy_image_name">trademark_1234_fb.jpg</string>
    <string name="txtQuality">Quality:</string>
    <string name="txtFound">Found:</string>
    <string name="txtLoadingCoasterList">Loading coasters...</string>
    <string name="txtEmptyCoasterList">No coasters found!</string>
    <string name="lblCoaster">Coaster</string>
    <string name="lblTextAndDescription">Description</string>
    <string name="lblShape">Shape</string>
    <string name="lblImages">Images</string>
    <string name="lblFound">Found</string>
    <string name="lblMeas1">Meas1:</string>
    <string name="lblMeas2">Meas2:</string>
    <string name="lblMeasUnit">mm</string>
    <string name="lblSeriesMaxNbr">Max nbr:</string>
    <string name="lblSeriesOrdered">Ordered:</string>
    <string name="lblNoExistingSeries">No existing series</string>
    <string name="lbl_on_crash_title">Unexpected fault</string>
    <string name="lbl_on_crash_message">This application has stopped unexpectedly.</string>
    <string name="lbl_on_crash_details_title">Details</string>

    <string name="quality_0">Unknown</string>
    <string name="quality_1">Worthless</string>
    <string name="quality_2">Almost worthless</string>
    <string name="quality_3">Extremely poor</string>
    <string name="quality_4">Very poor</string>
    <string name="quality_5">Poor</string>
    <string name="quality_6">Under average</string>
    <string name="quality_7">Average</string>
    <string name="quality_8">Good</string>
    <string name="quality_9">Very good</string>
    <string name="quality_10">Excellent</string>

    <string name="hint_search">Search</string>
    <string name="hint_trademark_search">Filter Trademark</string>
    <string name="hint_series_search">Filter Series</string>
    <string name="hint_collector_search">Filter Collector</string>
    <string name="hint_trademark">Trademark</string>
    <string name="hint_brewery">Brewery</string>
    <string name="hint_series">Series</string>
    <string name="hint_max_nbr">#</string>
    <string name="hint_collector_last_name">Last name</string>
    <string name="hint_collector_first_name">First name</string>
    <string name="hint_collector_initials">Initials</string>
    <string name="hint_collector_alias">Alias</string>

    <string name="title_activity_image_fullscreen">ImageFullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_trademark_list">TrademarkListActivity</string>
    <string name="title_activity_add_trademark">AddTrademarkActivity</string>

    <string name="dialog_delete_coaster_text">Delete this coaster?</string>

    <string name="btn_on_crash_details">Details</string>
    <string name="btn_on_crash_stop_app">Stop</string>
    <string name="btn_ok">Ok</string>
    <string name="title_activity_coaster">CoasterActivity</string>
</resources>
