<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_sorting_settings"
        android:key="pref_key_sorting_settings">
        <CheckBoxPreference
            android:key="pref_key_sort_reverse"
            android:title="@string/pref_sort_reverse"
            android:summary="@string/pref_sort_reverse_summary"
            android:defaultValue="true" />
        <!--Preference
            android:key="pref_key_sms_delete_limit"
            android:dependency="pref_key_sort_reverse"
            android:title="@string/pref_title_sms_delete"
            android:summary="@string/pref_summary_delete_limit" />
        <Preference
            android:key="pref_key_mms_delete_limit"
            android:dependency="pref_key_sort_reverse"
            android:title="@string/pref_title_mms_delete"
            android:summary="@string/pref_summary_delete_limit" /-->
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_show_info_settings"
        android:key="pref_key_show_info_settings">

        <CheckBoxPreference
            android:key="@string/pref_key_show_info_details"
            android:title="@string/pref_show_info_details"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="@string/pref_key_show_info_description"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_description"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_text"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_text"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_collector"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_collector"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_series"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_series"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_location"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_location"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_date"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_date"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_shape"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_shape"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_quality"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_quality"
            android:defaultValue="false" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_coaster_type"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_coaster_type"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="@string/pref_key_show_info_image_back"
            android:dependency="pref_key_show_info_details"
            android:title="@string/pref_show_info_image_back"
            android:summary="@string/pref_show_info_image_back_summary"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_listview_type_settings"
        android:key="pref_key_listview_type_settings">
        <ListPreference
            android:key="pref_key_listview_type"
            android:title="@string/pref_title_listview_type"
            android:summary="@string/listview_type_1_value"
            android:dialogTitle="@string/pref_dialogtitle_listview_type"
            android:entries="@array/pref_listview_type_entries"
            android:entryValues="@array/pref_listview_type_values"
            android:defaultValue="@string/listview_type_1_value" />
    </PreferenceCategory>
</PreferenceScreen>