<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_adv_filter"
        android:orderInCategory="200"
        android:title="@string/action_adv_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="300"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_export"
        android:orderInCategory="300"
        android:icon="@drawable/ic_menu_export"
        android:title="@string/action_export"
        app:showAsAction="ifRoom" />
</menu>
