<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="200"
        android:icon="@drawable/ic_menu_save"
        android:title="@string/action_save"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:orderInCategory="300"
        android:icon="@drawable/ic_menu_trash"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy"
        android:orderInCategory="400"
        android:icon="@drawable/ic_menu_copy"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom"/>
</menu>
