<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/colorOrangeLight"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutCoasterTitle"
                android:padding="@dimen/margin0"
                android:layout_marginBottom="@dimen/margin5">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTitleCoasterID"
                    android:text="@string/dummy_coaster_id"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsizeSubTitle"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTitleTrademark"
                    android:layout_marginLeft="@dimen/margin5"
                    android:text="@string/dummy_trademark"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsizeSubTitle"/>
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:id="@+id/layoutSeries"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding5"
                android:layout_marginBottom="@dimen/margin5" >
                <TextView
                    android:id="@+id/txtSeriesNbr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="@dimen/padding10"
                    android:textStyle="bold|italic"
                    android:text="@string/dummy_series_nbr" />

                <TextView
                    android:id="@+id/txtSeriesName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold|italic"
                    android:text="@string/dummy_series_name" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:layout_marginBottom="@dimen/margin5">

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:id="@+id/imgCoasterFront"/>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin5"
                    android:adjustViewBounds="true"
                    android:id="@+id/imgCoasterBack"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTextAndDescription"
                android:textStyle="bold"
                android:textSize="@dimen/textsizeSubTitle"
                android:layout_marginTop="@dimen/margin5"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5" >

                <TextView
                    android:id="@+id/txtCoasterDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:text="@string/dummy_coaster_desc" />

                <TextView
                    android:id="@+id/txtCoasterText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/padding10"
                    android:text="@string/dummy_coaster_text" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblQuality"
                android:textStyle="bold"
                android:textSize="@dimen/textsizeSubTitle"
                android:layout_marginTop="@dimen/margin5"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5">
                <TextView
                    android:id="@+id/txtQuality"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:text="@string/dummy_quality" />

                <TextView
                    android:id="@+id/txtQualityText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding10"
                    android:textStyle="normal"
                    android:text="@string/dummy_quality_text" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblShape"
                android:textStyle="bold"
                android:textSize="@dimen/textsizeSubTitle"
                android:layout_marginTop="@dimen/margin5"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5">
                <TextView
                    android:id="@+id/txtShape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:text="@string/dummy_shape" />

                <TextView
                    android:id="@+id/txtMeasurements"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding10"
                    android:textStyle="normal"
                    android:text="@string/dummy_measurements" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtFound"
                android:text="@string/lblFound"
                android:textStyle="bold"
                android:textSize="@dimen/textsizeSubTitle"
                android:layout_marginTop="@dimen/margin5"/>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/layoutDonation"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5">
                <TextView
                    android:id="@+id/txtDonationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:text="@string/dummy_donation_date" />

                <TextView
                    android:id="@+id/txtDonor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/padding10"
                    android:textStyle="normal"
                    android:text="@string/dummy_donor" />
            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin5"
                android:id="@+id/layoutCollectPlace">
                <TextView
                    android:id="@+id/txtCollectPlace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="normal"
                    android:text="@string/dummy_collect_place" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
