<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:background="@color/colorSpinnerGradientEnd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutTitle"
                android:padding="@dimen/margin0">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtTitleCollector"
                    android:text="@string/lblTitleAddCollector"
                    android:textStyle="bold"
                    android:textSize="@dimen/textsizeSubTitle"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutAddCollector"
                android:layout_marginTop="5dp"
                android:padding="@dimen/margin0">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/editCollectorLastName"
                    android:hint="@string/hint_collector_last_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:ellipsize="end" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editCollectorFirstName"
                    android:hint="@string/hint_collector_first_name"
                    android:inputType="text"
                    android:singleLine="true"
                    android:ellipsize="end" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editCollectorInitials"
                    android:hint="@string/hint_collector_initials"
                    android:inputType="text"
                    android:singleLine="true"
                    android:ellipsize="end" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editCollectorAlias"
                    android:hint="@string/hint_collector_alias"
                    android:inputType="text"
                    android:singleLine="true"
                    android:ellipsize="end" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
